Refactored serie H to use AssertJ